--- a/BanHang/Areas/Admin/Views/Products/Index.cshtml
+++ b/BanHang/Areas/Admin/Views/Products/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model PagedList.PagedList<BanHang.Models.EF.Product>
+﻿@model PagedList.PagedList<BanHang.Areas.Admin.ViewModels.ProductIndexViewModel>
+
 @using PagedList.Mvc
 @{
     ViewBag.Title = "Index";
@@ -89,9 +90,9 @@
                             <tr id="trow_@item.Id">
                                 <td><input type="checkbox" class="cbkItem" value="@item.Id" /></td>
                                 <td>@i</td>
-                                <td><img src="@item.ProductImage.FirstOrDefault(x=>x.IsDefault).Image" width="50" /></td>
+                                <td><img src="@item.ProductDefaultImage" width="50" /></td>
                                 <td>@item.Title</td>
-                                <td>@item.ProductCategoryId</td>
+                                <td>@item.ProductCategoryTiltle</td>
                                 <td>@item.Quantity</td>
                                 <td>@item.Price</td>
                                 <td>@item.CreatedDate.ToString("dd/MM/yyyy")</td>
