--- a/BanHang/Areas/Admin/Views/News/Edit.cshtml
+++ b/BanHang/Areas/Admin/Views/News/Edit.cshtml
@@ -58,53 +58,58 @@
                         @Html.HiddenFor(x => x.CategoryID)
                         @Html.HiddenFor(x => x.CreatedDate)
                         <!-- your steps content here -->
-                        <div id="logins-part" class="content active dstepper-block" role="tabpanel" aria-labelledby="logins-part-trigger">
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">Tiêu đề</label>
-                                @Html.TextBoxFor(x => x.Title, new { @class = "form-control", @placeholder = "Tiêu đề" })
-                                @Html.ValidationMessageFor(x => x.Title, null, new { @class = "text-danger" })
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputFile">Ảnh đại diện</label>
-                                <div class="input-group">
-                                    <div class="custom-file">
-                                        @Html.TextBoxFor(x => x.Image, new { @id = "txtImage", @class = "form-control" })
-                                    </div>
-                                    <div class="input-group-append">
-                                        <input type="button" value="Tải ảnh" onclick="BrowseServer('txtImage');" />
-                                    </div>
+                    <div id="logins-part" class="content active dstepper-block" role="tabpanel" aria-labelledby="logins-part-trigger">
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Tiêu đề</label>
+                            @Html.TextBoxFor(x => x.Title, new { @class = "form-control", @placeholder = "Tiêu đề" })
+                            @Html.ValidationMessageFor(x => x.Title, null, new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputFile">Ảnh đại diện</label>
+                            <div class="input-group">
+                                <div class="custom-file">
+                                    @Html.TextBoxFor(x => x.Image, new { @id = "txtImage", @class = "form-control" })
+                                </div>
+                                <div class="input-group-append">
+                                    <input type="button" value="Tải ảnh" onclick="BrowseServer('txtImage');" />
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <label for="exampleInputPassword1">Mô tả</label>
-                                @Html.TextAreaFor(x => x.Discription, new { @class = "form-control" })
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputPassword1">Chi tiết</label>
-                                @Html.TextAreaFor(x => x.Detail, new { @class = "form-control", @id = "txtDetail" })
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputPassword1">Hiển thị</label>
-                                @Html.CheckBoxFor(x => x.IsActive)
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputPassword1">Seo Title</label>
-                                @Html.TextAreaFor(x => x.SeoTitle, new { @class = "form-control" })
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputPassword1">Seo Description</label>
-                                @Html.TextAreaFor(x => x.SeoDiscription, new { @class = "form-control" })
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputPassword1">Seo Keywords</label>
-                                @Html.TextAreaFor(x => x.SeoKeywords, new { @class = "form-control" })
-                            </div>
-                            <div class="form-group">
-                                <button type="submit" class="btn btn-primary">Lưu</button>
-                                <a href="/admin/news" class="btn btn-danger">Quay lại</a>
-
-                            </div>
                         </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Mô tả</label>
+                            @Html.TextAreaFor(x => x.Discription, new { @class = "form-control" })
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Chi tiết</label>
+                            @Html.TextAreaFor(x => x.Detail, new { @class = "form-control", @id = "txtDetail" })
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail3">Danh mục</label>
+                            @Html.DropDownListFor(x => x.CategoryID, ViewBag.Category as SelectList, "-Chọn danh mục", new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.CategoryID, null, new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Hiển thị</label>
+                            @Html.CheckBoxFor(x => x.IsActive)
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Seo Title</label>
+                            @Html.TextAreaFor(x => x.SeoTitle, new { @class = "form-control" })
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Seo Description</label>
+                            @Html.TextAreaFor(x => x.SeoDiscription, new { @class = "form-control" })
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Seo Keywords</label>
+                            @Html.TextAreaFor(x => x.SeoKeywords, new { @class = "form-control" })
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-success">Cập nhật</button>
+                            <a href="/admin/news" class="btn btn-danger">Quay lại</a>
+
+                        </div>
+                    </div>
                     }
 
                 </div>
