--- a/BanHang/Areas/Admin/Views/Products/Index.cshtml
+++ b/BanHang/Areas/Admin/Views/Products/Index.cshtml
@@ -20,6 +20,7 @@
         </li>
     </ul>
 }
+<link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
 <!-- Content Header (Page header) -->
 <section class="content-header">
     <div class="container-fluid">
@@ -86,11 +87,14 @@
                         foreach (var item in Model)
                         {
 
+
                             var strCheck = item.IsActive ? "<i class='fa fa-check text-success'></i>" : "<i class='fas fa-times text-danger'></i>";
+                            var strCheckHome = item.IsHome ? "<i class='fa fa-check text-success'></i>" : "<i class='fas fa-times text-danger'></i>";
+                            var strCheckSale = item.IsSale ? "<i class='fa fa-check text-success'></i>" : "<i class='fas fa-times text-danger'></i>";
                             <tr id="trow_@item.Id">
                                 <td><input type="checkbox" class="cbkItem" value="@item.Id" /></td>
                                 <td>@i</td>
-                                <td><img src="@item.ProductDefaultImage" width="50" /></td>
+                                <td><img class="imgproduct" data-id="@item.Id" src="@item.ProductDefaultImage" width="50" /></td>
                                 <td>@item.Title</td>
                                 <td>@item.ProductCategoryTiltle</td>
                                 <td>@item.Quantity</td>
@@ -133,10 +137,32 @@
 
 </section>
 <!-- /.content -->
-
+<div id="dialog">
+    <iframe id="myIframe" style="border:0;width:100%;height:100%;"></iframe>
+</div>
 @section scripts{
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
     <script>
         $(document).ready(function () {
+            $("#dialog").dialog({
+                autoOpen: false,
+                show: "fade",
+                hide: "fade",
+                modal: true,
+                height: '600',
+                width: '700',
+                resizable: true,
+                title: 'quản lý sản phẩm',
+                close: function () {
+                    window.location.reload();
+                }
+            });
+            $('body').on("click", ".imgproduct", function () {
+                var proid = $(this).attr("data-id");
+                $("#dialog #myIframe").attr("src", "/admin/ProductImage/Index?id=" + proid);
+                $('#dialog').dialog('open');
+                return false;
+            });
             $('body').on('click', '#BtnDeleteAll', function (e) {
                 e.preventDefault();
                 var str = " ";
