--- a/BanHang/Areas/Admin/Views/ProductCategory/Add.cshtml
+++ b/BanHang/Areas/Admin/Views/ProductCategory/Add.cshtml
@@ -48,7 +48,7 @@
         </div>
         <div class="card-body">
             <div class="bs-stepper-content">
-                @using (Html.BeginForm("Edit", "ProductCategory", FormMethod.Post, new { }))
+                @using (Html.BeginForm("Add", "ProductCategory", FormMethod.Post, new { }))
                 {
                     @Html.AntiForgeryToken()
                     @Html.ValidationSummary(true)
@@ -63,6 +63,17 @@
                         <label for="exampleInputEmail1">Alias</label>
                         @Html.TextBoxFor(x => x.Alias, new { @class = "form-control", @placeholder = "Tiêu đề" })
                         @Html.ValidationMessageFor(x => x.Alias, null, new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputFile">Ảnh</label>
+                        <div class="input-group">
+                            <div class="custom-file">
+                                @Html.TextBoxFor(x => x.Icon, new { @id = "txtImage", @class = "form-control" })
+                            </div>
+                            <div class="input-group-append">
+                                <input type="button" value="Tải ảnh" onclick="BrowseServer('txtImage');" />
+                            </div>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="exampleInputEmail1">Mô tả</label>
