--- a/BanHang/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
+++ b/BanHang/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
@@ -26,7 +26,7 @@
     <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <!-- Add icons to the links using the .nav-icon class
-            with font-awesome or any other icon font library -->
+    with font-awesome or any other icon font library -->
             <li class="nav-item">
                 <a href="/admin/Category" class="nav-link">
                     <i class="nav-icon fas fa-tachometer-alt"></i>
@@ -36,25 +36,34 @@
                     </p>
                 </a>
                 @*<ul class="nav nav-treeview">
-                        <li class="nav-item">
-                            <a href="~/Content/client/index.html" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Dashboard v1</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="~/Content/client/index2.html" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Dashboard v2</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="~/Content/client/index3.html" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Dashboard v3</p>
-                            </a>
-                        </li>
-                    </ul>*@
+                <li class="nav-item">
+                    <a href="~/Content/client/index.html" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Dashboard v1</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="~/Content/client/index2.html" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Dashboard v2</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="~/Content/client/index3.html" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Dashboard v3</p>
+                    </a>
+                </li>
+            </ul>*@
+            </li>
+            <li class="nav-item">
+                <a href="/admin/role" class="nav-link">
+                    <i class="nav-icon fas fa-th"></i>
+                    <p>
+                        Role
+                        @*<span class="right badge badge-danger">New</span>*@
+                    </p>
+                </a>
             </li>
             <li class="nav-item">
                 <a href="/admin/news" class="nav-link">
@@ -75,14 +84,14 @@
                 </a>
             </li>
             <!--<li class="nav-item">
-                <a href="/admin/post" class="nav-link">
-                    <i class="nav-icon fas fa-th"></i>
-                    <p>
-                        Quảng Cáo-->
+        <a href="/admin/post" class="nav-link">
+            <i class="nav-icon fas fa-th"></i>
+            <p>
+                Quảng Cáo-->
             @*<span class="right badge badge-danger">New</span>*@
             <!--</p>
-                </a>
-            </li>-->
+        </a>
+    </li>-->
             <li class="nav-item">
                 <a href="/admin" class="nav-link">
                     <i class="nav-icon fas fa-tachometer-alt"></i>
