--- a/BanHang/Areas/Admin/Views/ProductCategory/Add.cshtml
+++ b/BanHang/Areas/Admin/Views/ProductCategory/Add.cshtml
@@ -65,6 +65,17 @@
                         @Html.ValidationMessageFor(x => x.Alias, null, new { @class = "text-danger" })
                     </div>
                     <div class="form-group">
+                        <label for="exampleInputFile">Ảnh</label>
+                        <div class="input-group">
+                            <div class="custom-file">
+                                @Html.TextBoxFor(x => x.Icon, new { @id = "txtImage", @class = "form-control" })
+                            </div>
+                            <div class="input-group-append">
+                                <input type="button" value="Tải ảnh" onclick="BrowseServer('txtImage');" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label for="exampleInputEmail1">Mô tả</label>
                         @Html.TextBoxFor(x => x.Discription, new { @class = "form-control", @placeholder = "Mô tả" })
                         @Html.ValidationMessageFor(x => x.Discription, null, new { @class = "text-danger" })
