--- a/BanHang/Views/Products/Partial_ItemsByCateId.cshtml
+++ b/BanHang/Views/Products/Partial_ItemsByCateId.cshtml
@@ -10,7 +10,7 @@
         {
             strImge = img.Image;
         }
-        <div class="product-item @item.ProductCategories.Alias">
+        <div class="product-item @ViewBag.ProductCategoryAlias">
             <div class="product discount product_filter">
                 <div class="product_image">
                     <img src="@strImge" alt="@item.Title">
