--- a/BanHang/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
+++ b/BanHang/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
@@ -134,13 +134,8 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link">
-                    <i class="nav-icon fas fa-th"></i>
-                    <p>
-                        Đăng xuất
-                        @*<span class="right badge badge-danger">New</span>*@
-                    </p>
-                </a>
+                <a href="~/Home/Index">Quay lại</a>
+                
             </li>
         </ul>
     </nav>
