--- a/BanHang/Areas/Admin/Views/ProductImage/Index.cshtml
+++ b/BanHang/Areas/Admin/Views/ProductImage/Index.cshtml
@@ -49,7 +49,7 @@
                     foreach (var item in Model)
                     {
                         <li id="trow_@item.Id">
-                            <img src="@item.Image" width="200" height="200" />
+                            <img src="@item.Image" width="200" />
                             <div class="box-btn">
                                 <a href="#" data-id="@item.Id" class="btn btn-sm btn-danger btnDelete"><i class="fa fa-trash"></i></a>
                                 @if (item.IsDefault)
@@ -110,7 +110,7 @@
                     data: { id: id },
                     success: function (rs) {
                         if (rs.success) {
-                            window.location.reload();
+                            $('#trow_' + id).remove();
                         }
                         else {
                             alert("Không thể xóa ảnh !")
