--- a/BanHang/Areas/Admin/Views/Account/Index.cshtml
+++ b/BanHang/Areas/Admin/Views/Account/Index.cshtml
@@ -25,10 +25,6 @@
     <div class="card">
         <div class="card-header">
             <h3 class="card-title">danh sách tài khoản</h3>
-            <div class="card-tools">
-                
-                <a href="#" class="btn btn-danger" id="BtnDeleteAll">Xóa</a>
-            </div>
 
             <div class="card-tools">
                 <a href="/admin/account/create" class="btn btn-success">Thêm mới</a>
@@ -39,13 +35,10 @@
                 <thead>
                     <tr>
                         <th>#</th>
-                        <th>id</th>
                         <th>Tài Khoản</th>
                         <th>Họ Tên</th>
                         <th>Email</th>
-                        <th>Quyền</th>
-
-
+                        
                         <th></th>
                     </tr>
                 </thead>
@@ -57,21 +50,17 @@
                         {
                             <tr>
                                 <td>@i</td>
-                                <td>@item.Id</td>
                                 <td>@item.UserName</td>
                                 <td>@item.FullName</td>
                                 <td>@item.Email</td>
-                                <td>@item.Role</td>
-
+                                <td>@item.Roles</td>
                                 <td>
-                                    <a href="/admin/account/edit/@item.Id" class="btn btn-sm btn-primary">sửa</a>
-                                    <a href="#" data-id="@item.Id" class="btn btn-sm btn-danger btnDelete">Xóa</a>
+                                    <a href="/admin/account/edit/@item.UserName" class="btn btn-sm btn-primary">sửa</a>
+                                    <a href="#" data-user="@item.UserName" class="btn btn-sm btn-danger">xóa</a>
                                 </td>
                             </tr>
-                            i++;
                         }
                     }
-
                 </tbody>
             </table>
 
@@ -85,77 +74,4 @@
     <!-- /.card -->
 
 </section>
-@*@section scripts{
-    <script>
-        $(document).ready(function () {
-            $('body').on('click', '#BtnDeleteAll', function (e) {
-                e.preventDefault();
-                var str = " ";
-                var checkbox = $(this).parents('.card').find('tr td input:checkbox');
-                var i = 0;
-                checkbox.each(function () {
-
-
-                    if (this.checked) {
-                        checkbox.attr('selected', 'checked');
-                        var _id = $(this).val();
-                        if (i === 0) {
-                            str += _id;
-                        }
-                        else {
-                            str += "," + _id;
-                        }
-                        i++;
-                    } else {
-                        checkbox.attr('selected', '');
-                    }
-                });
-                if (str.length > 0) {
-                    var conf = confirm('Bạn có muốn xóa các bản ghi này hay không?');
-                    if (conf === true) {
-                        $.ajax({
-                            url: '/admin/account/deleteAll',
-                            type: 'post',
-                            data: { ids: str },
-                            success: function (rs) {
-                                if (rs.success) {
-                                    location.reload();
-                                }
-                            }
-                        });
-                    }
-                }
-            });
-            $('body').on('change', '#SelectAll', function () {
-                var checkStatus = this.checked;
-                var checkbox = $(this).parents('.card-body').find('tr td input:checkbox');
-                checkbox.each(function () {
-                    this.checked = checkStatus;
-                    if (this.checked) {
-                        checkbox.attr('selected', 'checked');
-                    } else {
-                        checkbox.attr('selected', '');
-                    }
-                });
-            });
-            $('body').on('click', '.btnDelete', function () {
-                var id = $(this).data("id");
-                var conf = confirm('Bạn muốn xóa hay không?');
-                if (conf == true) {
-                    $.ajax({
-                        url: '/admin/account/delete',
-                        type: 'POST',
-                        data: { id: id },
-                        success: function (rs) {
-                            if (rs.success) {
-                                $('#trow_' + id).remove();
-                            }
-                        }
-                    });
-                }
-            });
-
-            
-        });
-    </script>
-}*@
+<!-- /.content -->
