--- a/BanHang/Areas/Admin/Views/Account/Create.cshtml
+++ b/BanHang/Areas/Admin/Views/Account/Create.cshtml
@@ -31,7 +31,7 @@
         </div>
         <div class="card-body">
 
-            @using (Html.BeginForm("Create", "Account", FormMethod.Post))
+            @using (Html.BeginForm("Create", "Account", FormMethod.Post,new { }))
             {
                 @Html.ValidationSummary(false)
                 @Html.AntiForgeryToken()
