Revert "Merge branch 'POO' of https://github.com/DTAT1611/BanHang into POO"
This reverts commit 250f0f042c2a42f9fe1d7f6ed6471fa4862ae75f, reversing
changes made to c63c71fa4d92bbcd20956a73d97cc059f7c49bfa.

--- a/BanHang/Areas/Admin/Views/Account/Index.cshtml
+++ b/BanHang/Areas/Admin/Views/Account/Index.cshtml
@@ -25,6 +25,7 @@
     <div class="card">
         <div class="card-header">
             <h3 class="card-title">danh sách tài khoản</h3>
+            
 
             <div class="card-tools">
                 <a href="/admin/account/create" class="btn btn-success">Thêm mới</a>
@@ -36,10 +37,13 @@
                 <thead>
                     <tr>
                         <th>#</th>
+                        <th>id</th>
                         <th>Tài Khoản</th>
                         <th>Họ Tên</th>
                         <th>Email</th>
-                        
+                        <th>Quyền</th>
+
+
                         <th></th>
                     </tr>
                 </thead>
@@ -51,17 +55,21 @@
                         {
                             <tr>
                                 <td>@i</td>
+                                <td>@item.Id</td>
                                 <td>@item.UserName</td>
                                 <td>@item.FullName</td>
                                 <td>@item.Email</td>
-                                <td>@item.Roles</td>
+                                <td>@item.Role</td>
+
                                 <td>
-                                    <a href="/admin/account/edit/@item.UserName" class="btn btn-sm btn-primary">sửa</a>
-                                    <a href="#" data-user="@item.UserName" class="btn btn-sm btn-danger">xóa</a>
+                                    <a href="/admin/account/edit/@item.Id" class="btn btn-sm btn-primary">sửa</a>
+                                    <a href="#" data-id="@item.Id" class="btn btn-sm btn-danger btnDelete">Xóa</a>
                                 </td>
                             </tr>
+                            i++;
                         }
                     }
+
                 </tbody>
             </table>
 
@@ -75,7 +83,6 @@
     <!-- /.card -->
 
 </section>
-
 @section scripts{
     <script>
         $(document).ready(function () {
