--- a/BanHang/Views/Products/Index.cshtml
+++ b/BanHang/Views/Products/Index.cshtml
@@ -10,8 +10,9 @@
 
     <div class="breadcrumbs d-flex flex-row align-items-center">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="/"><i class="fa fa-angle-right" aria-hidden="true"></i>Men's</a></li>
+            <li><a href="/">Home</a></li>
+            <li class="active">
+            <a href="/"><i class="fa fa-angle-right" aria-hidden="true"></i>@ViewBag.CateName</a></li>
         </ul>
     </div>
 
