--- a/BanHang/Views/Shared/_Layout.cshtml
+++ b/BanHang/Views/Shared/_Layout.cshtml
@@ -121,7 +121,7 @@
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <div class="logo_container">
-                                    <a href="/">Chợ<span>Online</span></a>
+                                    <a href="/">Chợ<span style="color: forestgreen;">Online</span></a>
                                 </div>
                                 <nav class="navbar">
                                     @Html.Action("MenuTop", "Menu")
