--- a/BanHang/Content/assets/styles/single_styles.css
+++ b/BanHang/Content/assets/styles/single_styles.css
@@ -812,10 +812,9 @@ section
 	font-weight: 700;
 	text-transform: uppercase;
 }
-.logo_container a span
-{
-	color: #fe4c50;
-}
+	.logo_container a span {
+		color: forestgreen;
+	}
 .red_button
 {
 	display: -webkit-inline-box;
