Tawk.to Intergration

--- a/BanHang/Areas/Admin/Views/Account/Index.cshtml
+++ b/BanHang/Areas/Admin/Views/Account/Index.cshtml
@@ -36,8 +36,8 @@
             <table class="table table-bordered">
                 <thead>
                     <tr>
-                        <th>#</th>
-                        <th>id</th>
+                        <th>STT</th>
+                        <th>ID</th>
                         <th>Tài Khoản</th>
                         <th>Họ Tên</th>
                         <th>Email</th>
