--- a/BanHang/Views/Account/Login.cshtml
+++ b/BanHang/Views/Account/Login.cshtml
@@ -3,8 +3,12 @@
 @{
     ViewBag.Title = "Log in";
 }
-<link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">
+@*<link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">*@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-xA0NIEBcZVKqMHUwYMgRnMtwLyHiJj5M2OGmiqXbXQlRJDDN8q7gAxoN+b9a9kDM" crossorigin="anonymous">
+<style>
 
+    
+</style>
 <div class="container" style="margin-top:160px">
     <hr />
     <h2>@ViewBag.Title.</h2>
@@ -27,9 +31,10 @@
                     <div class="form-group">
                         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
                         <div class="col-md-10">
-                            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                            @Html.PasswordFor(m => m.Password, new { @class = "form-control pwd" })
                             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                         </div>
+                        <input type="button" class="btnShow" value="show" />
                     </div>
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
@@ -39,18 +44,18 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="button">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Log in" class="btn btn-default" />
+                            <input style="padding-right: 0; cursor: pointer;" type="submit" value="Log in" class="btn btn-default" />
                         </div>
                     </div>
                     <p>
                         @Html.ActionLink("Register as a new user", "Register")
                     </p>
                     //Enable this once you have account confirmation enabled for password reset functionality
-                        <p>
-                            @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                        </p>
+                    <p>
+                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                    </p>
                 }
             </section>
         </div>
@@ -65,4 +70,23 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script>
+        $(".btnShow").click(function () {
+            if ($(this).val() == "Show") {
+                $(this).val("Hide");
+                $(".pwd").attr("type", "text");
+            } else {
+                $(this).val("Show");
+                $(".pwd").attr("type", "password");
+            }
+        });
+        //$(".btnShow").mousedown(function () {
+        //    $(".pwd").attr("type", "text");
+        //});
+        //$(".btnShow").on("mouseleave", function () {
+        //    $(".pwd").attr("type", "password");
+        //});
+    </script>
+
 }
