--- a/BanHang/Views/AddToCart/AddToCartPartial.cshtml
+++ b/BanHang/Views/AddToCart/AddToCartPartial.cshtml
@@ -1,1 +1,1 @@
-﻿<a href="@Url.Action("AddToCart","AddToCart")"><i class="fa fa-shopping-cart" aria-hidden="true"></i>(@ViewBag.TongSoLuong)</a>
+﻿<a href="@Url.Action("AddToCart","AddToCart")"><i class="fa fa-shopping-cart" aria-hidden="true"></i>(@ViewBag.TongSoLuong) Giỏ Hàng</a>
