--- a/BanHang/Views/AddToCart/AddToCart.cshtml
+++ b/BanHang/Views/AddToCart/AddToCart.cshtml
@@ -8,62 +8,65 @@
 @*<link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">
 <link rel="stylesheet" type="text/css" href="~/Content/asets/styles/single_styles.css">
 <link rel="stylesheet" type="text/css" href="~/Content/asets/styles/single_responsive.css">*@
-<h2>Giỏ Hàng</h2>
-
-<table>
-
-    <tr>
-
-        <td>ID    |</td>
-
-        <td>Tên    |</td>
+<h2 style="position: relative; left: 80px">Giỏ Hàng</h2>
 
 
+<table style="border: 1px solid black; width: 50%;position: relative; left: 80px ">
 
-        <td>Đơn giá    |</td>
+    <tr style="border: 1px solid black; text-align: center">
 
-        <td>Số lượng   |</td>
+        <td style="border: 1px solid black; text-align: center">ID    </td>
+
+        <td style="border: 1px solid black; text-align: center">Tên    </td>
+
+        <td style="border: 1px solid black; text-align: center">Đơn giá    </td>
+
+        <td style="border: 1px solid black; text-align: center">Số lượng   </td>
 
 
-        <td>Thành Tiền    |</td>
+        <td style="border: 1px solid black; text-align: center">Thành Tiền    </td>
 
     </tr>
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>@item.iId</td>
+        <tr style="border: 1px solid black">
+            <td style="border: 1px solid black; text-align: center">@item.iId</td>
 
-            <td>@item.stitle</td>
-
-
-
-            <td>@item.dprice VND</td>
-
-            <td>@item.isoluong</td>
+            <td style="border: 1px solid black; text-align: center">@item.stitle</td>
 
 
-            <td>@item.ThanhTien VND</td>
 
-        </tr>
-        <tr>
-            <td colspan="6" style="text-align:right">
-                @Html.ActionLink("Edit Gio Hang", "EditAddToCart")
-            </td>
+            <td style="border: 1px solid black; text-align: center">@item.dprice VND</td>
+
+            <td style="border: 1px solid black; text-align: center">@item.isoluong</td>
+
+
+            <td style="border: 1px solid black; text-align: center">@item.ThanhTien VND</td>
+
         </tr>
 
 
-        <tr>
-            <td colspan="6" style="text-align:right">
-                @using (Html.BeginForm("DatHang", "GioHang"))
-                {
-                    <input type="submit" value="Đặt hàng" />
-                }
-            </td>
-        </tr>
+
+
     }
-</table>
-@section scripts{
-    <script src="~/Content/assets/js/single_custom.js"></script>
 
-}
+    
+</table>
+<table style="position: relative; left: 80px ">
+    <tr>
+        <td style="text-align: right " colspan="6">
+            @Html.ActionLink("Edit Gio Hang", "EditAddToCart")
+        </td>
+        <td colspan="6" >
+            <a href="@Url.Action("CheckOut","AddToCart")"><input type="submit" value="Đặt hàng" /></a>
+
+        </td>
+    </tr>
+    
+</table>
+
+    @section scripts{
+        <script src="~/Content/assets/js/single_custom.js"></script>
+
+    }
