--- a/BanHang/Views/Shared/_Layout.cshtml
+++ b/BanHang/Views/Shared/_Layout.cshtml
@@ -12,13 +12,15 @@
     <link rel="stylesheet" type="text/css" href="~/Content/assets/plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
     <link rel="stylesheet" type="text/css" href="~/Content/assets/plugins/OwlCarousel2-2.2.1/animate.css">
     <link rel="stylesheet" type="text/css" href="~/Content/assets/plugins/jquery-ui-1.12.1.custom/jquery-ui.css">
-    
-    
+
+
     <link rel="stylesheet" type="text/css" href="~/Content/assets/styles/responsive.css">
     @*@RenderSection("css", required: false)*@
     <script src="~/Scripts/jsShopping.js"></script>
     @*@Styles.Render("~/Content/css")*@
     @Scripts.Render("~/bundles/modernizr")
+    <script src="~/Content/assets/js/jquery-3.2.1.min.js"></script>
+    @Scripts.Render("~/bundles/jqueryval")
 
 </head>
 <body>
@@ -119,34 +121,34 @@
                 </div>
             </div>
 
-            <!--<!-- Main Navigation -->-->
-            <!--@*<div class="main_nav_container">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12 text-right">
-                            <div class="logo_container">
-                                <a href="/">Chợ<span style="color: forestgreen;">Online</span></a>
-                            </div>
-                            <nav class="navbar">
-                                @Html.Action("MenuTop", "Menu")
-                                <ul class="navbar_user">
-                                    <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
-                                    <li class="checkout">
-                                        <a href="#">
-                                            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                                            <span id="checkout_items" class="checkout_items">2</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                                <div class="hamburger_container">
-                                    <i class="fa fa-bars" aria-hidden="true"></i>
+            <!--<!-- Main Navigation -->
+            @*<div class="main_nav_container">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12 text-right">
+                                <div class="logo_container">
+                                    <a href="/">Chợ<span style="color: forestgreen;">Online</span></a>
                                 </div>
-                            </nav>
+                                <nav class="navbar">
+                                    @Html.Action("MenuTop", "Menu")
+                                    <ul class="navbar_user">
+                                        <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+                                        <li class="checkout">
+                                            <a href="#">
+                                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                                                <span id="checkout_items" class="checkout_items">2</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    <div class="hamburger_container">
+                                        <i class="fa fa-bars" aria-hidden="true"></i>
+                                    </div>
+                                </nav>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>*@-->
+                </div>*@
 
         </header>
 
@@ -279,7 +281,7 @@
     </div>
 
     @*@Scripts.Render("~/bundles/jquery")*@
-    <script src="~/Content/assets/js/jquery-3.2.1.min.js"></script>
+    
     <script src="~/Content/assets/styles/bootstrap4/popper.js"></script>
     <script src="~/Content/assets/styles/bootstrap4/bootstrap.min.js"></script>
     <script src="~/Content/assets/plugins/Isotope/isotope.pkgd.min.js"></script>
@@ -287,7 +289,10 @@
     <script src="~/Content/assets/plugins/jquery-ui-1.12.1.custom/jquery-ui.js"></script>
     <script src="~/Content/assets/plugins/easing/easing.js"></script>
     <script src="~/Content/assets/js/custom.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     @*@Scripts.Render("~/bundles/bootstrap")*@
+
     @RenderSection("scripts", required: false)
 </body>
 
