--- a/BanHang/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
+++ b/BanHang/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
@@ -1,14 +1,5 @@
 ﻿    <!-- Sidebar -->
 <div class="sidebar">
-    <!-- Sidebar user (optional) -->
-    <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-            <img src="~/Content/client/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
-        </div>
-        <div class="info">
-            <a href="#" class="d-block">Alexander Pierce</a>
-        </div>
-    </div>
 
     <!-- SidebarSearch Form -->
     @*<div class="form-inline">
@@ -83,6 +74,7 @@
                     </p>
                 </a>
             </li>
+
             <!--<li class="nav-item">
     <a href="/admin/post" class="nav-link">
         <i class="nav-icon fas fa-th"></i>
@@ -134,8 +126,17 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a href="~/Admin/Order" class="nav-link">
+                    <i class="nav-icon fas fa-th"></i>
+                    <p>
+                        Quản lý order
+                        @*<span class="right badge badge-danger">New</span>*@
+                    </p>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a href="~/Home/Index">Quay lại</a>
-                
+
             </li>
         </ul>
     </nav>
