--- a/BanHang/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BanHang/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -161,7 +161,7 @@
         <!-- Main Sidebar Container -->
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
-            <a href="~/Content/client/index3.html" class="brand-link">
+            <a href="/" class="brand-link">
                 <img src="~/Content/client/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
                 <span class="brand-text font-weight-light">Web Bán Hàng</span>
             </a>
