--- a/BanHang/Views/AddToCart/CheckOutPartial.cshtml
+++ b/BanHang/Views/AddToCart/CheckOutPartial.cshtml
@@ -1,54 +1,51 @@
 ﻿@model BanHang.Models.OrderViewModel
-@using (Ajax.BeginForm("CheckOut", "AddToCart", new AjaxOptions
+@using (Ajax.BeginForm("CheckOut", "Shoppingcart", new AjaxOptions
 {
     HttpMethod = "POST",
     UpdateTargetId = "load_data",
-    OnComplete="OnSuccessCO",
-    OnFailure="OnFailure"
+    OnSuccess = "OnSuccessCO",
+    OnFailure = "OnFailure",
+    OnBegin = "OnBeginCO"
 
-
-},new {@Id="myForm"}))
+}, new { @Id = "myForm" }))
 {
-
+    
     @Html.AntiForgeryToken()
-
-    <div style=" left:50px; top:70px" class="form-group">
-
-        <label>Họ Tên Khách Hàng: </label>
-        <input type="text" name="CustomerName"required class="form-control" autocomplete="off" />
-
+    <h3>Thông tin khách hàng</h3>
+    <div class="form-group">
+        <label>Họ tên khách hàng</label>
+        <input type="text" name="CustomerName" required class="form-control" autocomplete="off" />
     </div>
-    <div style=" left:50px; top:70px"required class="form-group">
-
-        <label>Số Điện thoại: </label>
-        <input type="text" name="Phone"required class="form-control" autocomplete="off" />
-
+    <div class="form-group">
+        <label>Số điện thoại</label>
+        <input type="text" name="Phone" class="form-control" autocomplete="off" />
     </div>
-    <div style=" left:50px; top:70px" class="form-group">
-
-        <label>Địa chỉ: </label>
+    <div class="form-group">
+        <label>Địa chỉ</label>
         <input type="text" name="Address" class="form-control" autocomplete="off" />
-
-
     </div>
-    <div style=" left:50px; top:70px" class="form-group">
-
-        <label>Email: </label>
+    <div class="form-group">
+        <label>Email</label>
         <input type="text" name="Email" class="form-control" autocomplete="off" />
-
     </div>
-    <div style=" left:50px; top:70px" class="form-group">
-
-        <label>Hình Thức Thanh Toán</label>
-        <select class="form-control" name="TypePayment">
+    <div class="form-group">
+        <label>Hình thức thanh toán</label>
+        <select class="form-control" name="TypePayment" id="drTypePayment">
             <option value="1" selected>COD</option>
-            <option value="2">chuyển khoản</option>
+            <option value="2">Chuyển khoản</option>
         </select>
-
     </div>
-    <div style=" left:50px; top:70px" class="form-group">
-
-        <input type="submit" value="Đặt hàng" />
-
+    <div class="form-group" id="load_form_payment" style="display:none;">
+        <h4> <label>Chọn phương thức thanh toán:</label><br /></h4>
+        <h5>Cách 1: Chuyển hướng sang VNPAY chọn phương thức thanh toán</h5>
+        <label><input type="radio" name="TypePaymentVN" value="0" checked /> Cổng thanh toán VNPAYQR </label>
+        <h5>Cách 2: Tách phương thức thanh toán tại site của Merchant</h5>
+        <label><input type="radio" name="TypePaymentVN" value="1" /> Thanh toán qua ứng dụng hỗ trợ VNPAYQR </label><br />
+        <label><input type="radio" name="TypePaymentVN" value="2" /> ATM-Tài khoản ngân hàng nội địa </label><br />
+        <label><input type="radio" name="TypePaymentVN" value="3" /> Thanh toán qua thẻ quốc tế </label><br />
+    </div>
+    
+    <div class="form-group">
+        <button type="submit" class="btn btn-block btn-success" id="btnCheckOut">Đặt hàng</button>
     </div>
 }
