--- a/BanHang/Views/AddToCart/CheckOut.cshtml
+++ b/BanHang/Views/AddToCart/CheckOut.cshtml
@@ -14,7 +14,7 @@
     <div class="container single_product_container">
         <div class="row">
             <div style=" left:50px; top:70px" class="col-lg-12">
-                <h2>Thanh Toán</h2>
+                <h2>Thông tin khách hàng Thanh Toán</h2>
             </div>
         </div>
 
